log
Thu, Mar 27, 2025  5:21:30 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:24:56 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4615ac0
Thu, Mar 27, 2025  5:35:08 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
23838ad
Thu, Mar 27, 2025  5:35:55 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7182a79
Thu, Mar 27, 2025  5:37:18 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
82340e8
Thu, Mar 27, 2025  5:38:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
58297cd
Thu, Mar 27, 2025  5:41:03 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b97377c
Thu, Mar 27, 2025  5:42:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
461526d
Thu, Mar 27, 2025  5:48:21 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5bbcd9e
Thu, Mar 27, 2025  5:51:21 PM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
9d3e682
Thu, Mar 27, 2025  5:58:00 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
8b541a2
Thu, Mar 27, 2025  6:00:32 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
fb875bb
Thu, Mar 27, 2025  6:02:00 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
e7cf905
Thu, Mar 27, 2025  6:03:38 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
e4d1c1c
Thu, Mar 27, 2025  6:05:59 PM: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  7|4
total_score: 25/70
08bdde0
Thu, Mar 27, 2025  6:07:18 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
86c7155
Thu, Mar 27, 2025  6:08:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
8af7fc3
Thu, Mar 27, 2025  6:08:46 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
4edd709
Thu, Mar 27, 2025  6:09:35 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
cb93f60
Thu, Mar 27, 2025  6:13:42 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
41ad081
Thu, Mar 27, 2025  6:15:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce8f1cd
Thu, Mar 27, 2025  6:15:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
76698c0
Thu, Mar 27, 2025  6:16:14 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
cf08c95
Thu, Mar 27, 2025  6:17:41 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
45ffeba
Thu, Mar 27, 2025  6:18:26 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
17c1191
Thu, Mar 27, 2025  6:19:27 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d27ffc2
Thu, Mar 27, 2025  6:19:58 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8ef31e5
Thu, Mar 27, 2025  8:16:59 PM: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:81:16: error: 'List {aka struct List}' has no member named 'aux'
     return list->aux->data;
                ^~
list.c:81:12: error: 'return' with a value, in function returning void [-Werror]
     return list->aux->data;
            ^~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
97712ca
Thu, Mar 27, 2025  8:21:06 PM: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
47d8932
Thu, Mar 27, 2025  8:22:09 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
fc0f778
Thu, Mar 27, 2025  8:23:02 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
08dcb88
Thu, Mar 27, 2025  8:43:37 PM: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
830c90e
Thu, Mar 27, 2025  8:44:50 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
e5de52f
Thu, Mar 27, 2025  8:47:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
f89372e
Thu, Mar 27, 2025  8:48:51 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
a9f6c22
Thu, Mar 27, 2025  8:50:23 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
6bc579f
Thu, Mar 27, 2025  9:19:53 PM: 
 list.c | 20 ++++++--------------
 1 file changed, 6 insertions(+), 14 deletions(-)
 tests:  11|1
total_score: 55/70
da3daea
Thu, Mar 27, 2025 10:53:07 PM: 
 list.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
ccd75b8
Thu, Mar 27, 2025 10:53:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
fb0c571
Thu, Mar 27, 2025 10:55:49 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
be3e6d9
